easy grid not showing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 
 .select {
     height: 50px;
-    width: 150px;
+    width: 420px;
     box-shadow: 15px 8px 3px 3px lightgrey;
     font-size: 2rem;
 }
@@ -48,7 +48,7 @@
 }
 
 .p-score{
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 #button {
